--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
+    "firebase-admin": "^11.10.1",
     "helmet": "^6.0.1",
+    "mongoose": "^7.4.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
